--- a/public/test.html
+++ b/public/test.html
@@ -546,8 +546,8 @@ function buildStyleControl(type) {
       <option value="FZYaoti">方正姚体 (FZYaoti)</option>
       <option value='"Microsoft YaHei"'>微软雅黑 (Microsoft YaHei)</option>
       <option value="DengXian">等线 (DengXian)</option>
-      <option value='"PingFang SC"'>苹方-简 (PingFang SC)</option>
-      <option value='"Hiragino Sans GB"'>冬青黑体-简 (Hiragino Sans GB)</option>
+      <option value="LiSu">隶书 (LiSu)</option>
+      <option value="YouYuan">幼圆 (YouYuan)</option>
       <option value="SimSun">宋体 (SimSun)</option>
       <option value="SimHei">黑体 (SimHei)</option>
       <option value="KaiTi">楷体 (KaiTi)</option>
