--- a/public/test.html
+++ b/public/test.html
@@ -123,10 +123,10 @@
     </tbody>
   </table>
 
-  <div style="margin-top:10px; text-align:right;">
-    <button onclick="closeStyleWindow()">取消</button>
-    <button onclick="confirmStyle()">确定</button>
-  </div>
+<div style="margin-top:10px; text-align:right;">
+  <button onclick="confirmStyle()" class="btn-primary">确定</button>
+  <button onclick="closeStyleWindow()">取消</button>
+</div>
 </div>
 
 <script>
