--- a/public/test.html
+++ b/public/test.html
@@ -134,7 +134,7 @@ const ENDPOINT = "https://script.google.com/macros/s/AKfycbxe-P-iT8Jv8xSNTqdYB7S
 
 let allOptions = {}, activeFilters = {}, filterOptionsChoices, filterLogic = 'and';
 let originalItems = [], timeline = null;
-<!
+/*标签参数*/
 const attributeLabels = {
   EventType: "事件类型",
   Region: "地区",
