--- a/public/test.html
+++ b/public/test.html
@@ -164,9 +164,13 @@ const PRESET_COLORS = [
   lineColor: '连接线颜色',
   none: '无'
 };
+
+  // 本次会话的暂存：{ [attrKey]: Array<{ id, values: string[], style: {...} }> }
+const stagedRules = {};
 function styleLabel(key) {
   return STYLE_LABELS[key] || key; // 兜底：未知键名就原样显示
 }
+  
 /*过滤相关UI*/
 function openAddEventForm() {
   document.getElementById('event-form').style.display = 'block';
@@ -425,6 +429,27 @@ let currentStyleAttr = null;         // 当前正在编辑的属性
 const boundStyleType = {};           // { [attrKey]: 'fontFamily' | 'fontColor' | ... | 'none' }
 let stagedType = 'none';             // 下拉的临时选择（未确认前）
 
+  // 读取“样式内容控件”的当前值
+function readStyleValue(tdContent, type) {
+  if (type === 'fontFamily') {
+    const sel = tdContent.querySelector('select');
+    return sel ? sel.value : '';
+  }
+  if (type === 'fontColor' || type === 'borderColor' || type === 'backgroundColor' || type === 'lineColor') {
+    const color = tdContent.querySelector('input[type=color]');
+    return color ? color.value : '';
+  }
+  return '';
+}
+
+// 读取属性多选控件的值（支持 Choices.js 或原生 <select multiple>）
+function getSelectedAttrValues(sel) {
+  if (sel && sel._choices && typeof sel._choices.getValue === 'function') {
+    return sel._choices.getValue(true); // 直接取值数组
+  }
+  return Array.from(sel.selectedOptions || []).map(o => o.value);
+}
+  
 function openStyleWindow(attr) {
   currentStyleAttr = attr;
   document.getElementById('style-title').textContent =
@@ -536,9 +561,10 @@ function onResetBind() {
 
 // 仅更新临时选择；未确认前不写入绑定
 function closeStyleWindow() {
+  // 丢弃本次暂存
+  if (currentStyleAttr) stagedRules[currentStyleAttr] = [];
   document.getElementById('style-window').style.display = 'none';
 }
-  
 // —— 为样式行生成“应用范围”的多选下拉（复用过滤的数据与函数）——
 // 只负责 UI；不写任何样式逻辑
 function buildAttrMultiSelect(attrKey) {
@@ -571,82 +597,103 @@ function buildAttrMultiSelect(attrKey) {
   return sel;
 }
 
-// 新增一行（整合第②步颜色 UI + 第③步属性值多选；仅 UI，不应用样式）
+// 新增一行（仅 UI；点“添加到本次更改”后写入 stagedRules，不立刻应用）
 function addStyleRow() {
-  // 1) 必须先完成“确认绑定”
   const bound = boundStyleType[currentStyleAttr];
   if (!bound || bound === 'none') {
     alert('请先选择样式类型并“确认绑定”。');
     return;
   }
 
-  // 2) 取表格 tbody
   const tbody = document.getElementById('styleTableBody');
-  if (!tbody) {
-    console.warn('未找到 #styleTableBody');
-    return;
-  }
+  if (!tbody) return;
 
-  // 3) 构建一行
   const tr = document.createElement('tr');
 
-  // —— 左：样式内容控件（字体下拉 / 取色器 + HEX + 预设色块）
+  // —— 左：样式内容控件（字体下拉 / 取色器 + 预设）
   const tdContent = document.createElement('td');
-  tdContent.dataset.styleType = bound; // 仅作标记，后续调试或扩展会用到
-
-  // 兼容两种返回：buildStyleControl 可能返回 Node 或 { el, ... }
-  const ctrl = (typeof buildStyleControl === 'function') ? buildStyleControl(bound) : null;
-  if (ctrl) {
-    if (ctrl instanceof Node) {
-      tdContent.appendChild(ctrl);
-    } else if (ctrl.el) {
-      tdContent.appendChild(ctrl.el);
-    } else {
-      tdContent.textContent = (window.styleLabel ? styleLabel(bound) : bound) + '（控件未加载）';
-    }
-  } else {
-    tdContent.textContent = (window.styleLabel ? styleLabel(bound) : bound) + '（控件未加载）';
-  }
+  tdContent.dataset.styleType = bound;
+  tdContent.appendChild(buildStyleControl(bound));
   tr.appendChild(tdContent);
 
-  // —— 中：应用范围（复用过滤功能：allOptions + getFilterOptionsForKey + Choices）
+  // —— 中：属性值多选（复用过滤数据）
   const tdAttr = document.createElement('td');
-  let sel;
-  if (typeof buildAttrMultiSelect === 'function') {
-    // 第③步推荐：真正的“该属性值”的多选
-    sel = buildAttrMultiSelect(currentStyleAttr);
-  } else {
-    // 兜底：仍然只放“当前属性本身”的占位多选（不推荐，等你把 buildAttrMultiSelect 加上）
-    sel = document.createElement('select');
-    sel.multiple = true;
-    sel.innerHTML = `
-      <option value="${currentStyleAttr}">
-        ${(attributeLabels[currentStyleAttr] || currentStyleAttr)}
-      </option>
-    `;
-  }
+  const sel = (typeof buildAttrMultiSelect === 'function')
+    ? buildAttrMultiSelect(currentStyleAttr)
+    : (function () { // 兜底：原生多选 + 当前属性名
+        const s = document.createElement('select');
+        s.multiple = true; s.size = 6;
+        s.innerHTML = `<option value="${currentStyleAttr}">${(attributeLabels[currentStyleAttr] || currentStyleAttr)}</option>`;
+        return s;
+      })();
   tdAttr.appendChild(sel);
   tr.appendChild(tdAttr);
 
-  // —— 右：删除按钮（若启用了 Choices，销毁实例再移除行）
+  // —— 右：操作（添加到本次更改 / 删除此行）
   const tdAction = document.createElement('td');
+
+  const addBtn = document.createElement('button');
+  addBtn.type = 'button';
+  addBtn.textContent = '添加到本次更改';
+
   const delBtn = document.createElement('button');
   delBtn.type = 'button';
   delBtn.textContent = '×';
-  delBtn.title = '删除该样式行';
+  delBtn.style.marginLeft = '8px';
+
+  // 行内“添加到本次更改”：只写入 stagedRules，不应用
+  addBtn.addEventListener('click', () => {
+    const styleType = tdContent.dataset.styleType;                 // e.g. 'fontFamily' / 'fontColor'
+    const styleVal  = readStyleValue(tdContent, styleType);        // e.g. '"KaiTi"' / '#rrggbb'
+    const values    = getSelectedAttrValues(sel);                  // 选中的属性值数组
+
+    if (!styleVal) {
+      alert('请先选择一个样式值（如字体或颜色）');
+      return;
+    }
+    if (!values.length) {
+      alert('请至少选择一个属性值');
+      return;
+    }
+
+    // 写入本次暂存
+    if (!stagedRules[currentStyleAttr]) stagedRules[currentStyleAttr] = [];
+    const id = (crypto.randomUUID?.() || (Date.now() + '-' + Math.random()));
+    const rec = { id, values, style: {} };
+    rec.style[styleType] = styleVal;
+    stagedRules[currentStyleAttr].push(rec);
+
+    // 行内反馈：禁用控件 + 按钮，显示已添加
+    addBtn.disabled = true;
+    addBtn.textContent = '已添加';
+    const choices = sel && sel._choices;
+    if (choices && typeof choices.disable === 'function') choices.disable();
+    (tdContent.querySelector('select') || tdContent.querySelector('input'))?.setAttribute('disabled', 'disabled');
+
+    // 记住 id，若删除此行可同步移除暂存
+    tr.dataset.ruleId = id;
+  });
+
+  // 删除此行（若启用 Choices，要销毁；若此行已添加到暂存，也同步删除）
   delBtn.addEventListener('click', () => {
     const choices = sel && sel._choices;
-    if (choices && typeof choices.destroy === 'function') {
-      choices.destroy();
+    if (choices && typeof choices.destroy === 'function') choices.destroy();
+    const ruleId = tr.dataset.ruleId;
+    if (ruleId && stagedRules[currentStyleAttr]) {
+      const arr = stagedRules[currentStyleAttr];
+      const idx = arr.findIndex(r => r.id === ruleId);
+      if (idx >= 0) arr.splice(idx, 1);
     }
     tr.remove();
   });
+
+  tdAction.appendChild(addBtn);
   tdAction.appendChild(delBtn);
   tr.appendChild(tdAction);
 
-  // 4) 插入表格
   tbody.appendChild(tr);
 }
+
 
   // 根据类型构造控件（这里只造 UI，暂不写任何样式）
 function buildStyleControl(type) {
@@ -744,6 +791,29 @@ function buildStyleControl(type) {
 
 // 确认按钮
 function confirmStyle() {
+  const attr = currentStyleAttr;
+  const staged = stagedRules[attr] || [];
+  if (!staged.length) {
+    // 没有任何新增，直接关
+    document.getElementById('style-window').style.display = 'none';
+    return;
+  }
+
+  // 合并到持久规则（若你已有 styleRules）
+  if (window.styleRules) {
+    if (!styleRules[attr]) styleRules[attr] = [];
+    // 合并（简单 push；需要去重可自行扩展）
+    staged.forEach(r => styleRules[attr].push(r));
+  }
+
+  // 清空本次暂存
+  stagedRules[attr] = [];
+
+  // 若已实现编译应用，这里应用；否则仅关闭
+  if (typeof compileStyleCSS === 'function') {
+    compileStyleCSS();
+  }
+
   document.getElementById('style-window').style.display = 'none';
 }
 
