--- a/public/test.html
+++ b/public/test.html
@@ -544,109 +544,88 @@ function closeStyleWindow() {
 function buildAttrMultiSelect(attrKey) {
   const sel = document.createElement('select');
   sel.multiple = true;
-  sel.className = 'style-attr-select'; // 可选：便于加样式
+  sel.size = 6;                       // ✅ 无 Choices 时也便于多选
+  sel.className = 'style-attr-select';
 
-  // 用过滤系统的取值逻辑复用现有候选
-  const opts = (typeof getFilterOptionsForKey === 'function')
+  // 复用过滤候选；统一转字符串并去重
+  const raw = (typeof getFilterOptionsForKey === 'function')
     ? getFilterOptionsForKey(attrKey)
-    : (allOptions?.[attrKey] || []);
+    : (window.allOptions?.[attrKey] || []);
+  const opts = Array.isArray(raw)
+    ? Array.from(new Set(raw.map(v => String(v)).filter(Boolean)))
+    : [];
 
-  if (!opts || opts.length === 0) {
+  if (opts.length === 0) {
     const o = new Option('（暂无可选项 / 仍在加载）', '');
     o.disabled = true;
     sel.appendChild(o);
   } else {
+    // 默认不选中任何项（保持“默认为空”）
     opts.forEach(v => sel.appendChild(new Option(v, v)));
   }
 
-  // 可选：如果已引入 Choices.js，让多选更好用
+  // 若引入了 Choices.js，则升级为可搜索多选（与过滤弹窗一致的体验）
   if (window.Choices) {
     sel._choices = new Choices(sel, {
       removeItemButton: true,
       shouldSort: false,
+      placeholder: true,
+      placeholderValue: '选择适用的属性值…',
       searchPlaceholderValue: '搜索…',
-      position: 'bottom'
+      position: 'bottom',
+      allowHTML: false         // ✅ 安全：不渲染潜在 HTML
     });
   }
+
   return sel;
 }
 
+
 // 新增一行（整合第②步颜色 UI + 第③步属性值多选；仅 UI，不应用样式）
+// 新增一行（左=样式值控件；中=属性值多选（可搜索）；右=删除）
+// 注：本函数只负责 UI，真正应用样式仍在“确定”按钮统一收集后再处理
 function addStyleRow() {
-  // 1) 必须先完成“确认绑定”
   const bound = boundStyleType[currentStyleAttr];
   if (!bound || bound === 'none') {
     alert('请先选择样式类型并“确认绑定”。');
     return;
   }
-
-  // 2) 取表格 tbody
   const tbody = document.getElementById('styleTableBody');
-  if (!tbody) {
-    console.warn('未找到 #styleTableBody');
-    return;
-  }
+  if (!tbody) return;
 
-  // 3) 构建一行
   const tr = document.createElement('tr');
 
-  // —— 左：样式内容控件（字体下拉 / 取色器 + HEX + 预设色块）
+  // —— 左：样式值控件（字体下拉 / 取色器 + 预设），仅 UI
   const tdContent = document.createElement('td');
-  tdContent.dataset.styleType = bound; // 仅作标记，后续调试或扩展会用到
-
-  // 兼容两种返回：buildStyleControl 可能返回 Node 或 { el, ... }
-  const ctrl = (typeof buildStyleControl === 'function') ? buildStyleControl(bound) : null;
-  if (ctrl) {
-    if (ctrl instanceof Node) {
-      tdContent.appendChild(ctrl);
-    } else if (ctrl.el) {
-      tdContent.appendChild(ctrl.el);
-    } else {
-      tdContent.textContent = (window.styleLabel ? styleLabel(bound) : bound) + '（控件未加载）';
-    }
-  } else {
-    tdContent.textContent = (window.styleLabel ? styleLabel(bound) : bound) + '（控件未加载）';
-  }
+  tdContent.dataset.styleType = bound;      // 记录本行样式类型（后续 confirmStyle 收集用）
+  const ctrl = buildStyleControl(bound);    // 你已有的函数：返回一个元素（select 或 color 等）
+  tdContent.appendChild(ctrl);
   tr.appendChild(tdContent);
 
-  // —— 中：应用范围（复用过滤功能：allOptions + getFilterOptionsForKey + Choices）
+  // —— 中：属性值多选（复用过滤逻辑 + Choices，可搜索；默认空）
   const tdAttr = document.createElement('td');
-  let sel;
-  if (typeof buildAttrMultiSelect === 'function') {
-    // 第③步推荐：真正的“该属性值”的多选
-    sel = buildAttrMultiSelect(currentStyleAttr);
-  } else {
-    // 兜底：仍然只放“当前属性本身”的占位多选（不推荐，等你把 buildAttrMultiSelect 加上）
-    sel = document.createElement('select');
-    sel.multiple = true;
-    sel.innerHTML = `
-      <option value="${currentStyleAttr}">
-        ${(attributeLabels[currentStyleAttr] || currentStyleAttr)}
-      </option>
-    `;
-  }
+  const sel = buildAttrMultiSelect(currentStyleAttr);
   tdAttr.appendChild(sel);
   tr.appendChild(tdAttr);
 
-  // —— 右：删除按钮（若启用了 Choices，销毁实例再移除行）
+  // —— 右：删除按钮（如启用 Choices，先销毁实例再删节点）
   const tdAction = document.createElement('td');
   const delBtn = document.createElement('button');
   delBtn.type = 'button';
   delBtn.textContent = '×';
   delBtn.title = '删除该样式行';
   delBtn.addEventListener('click', () => {
-    const choices = sel && sel._choices;
-    if (choices && typeof choices.destroy === 'function') {
-      choices.destroy();
+    if (sel && sel._choices && typeof sel._choices.destroy === 'function') {
+      sel._choices.destroy();
     }
     tr.remove();
   });
   tdAction.appendChild(delBtn);
   tr.appendChild(tdAction);
 
-  // 4) 插入表格
   tbody.appendChild(tr);
 }
+
 
   // 根据类型构造控件（这里只造 UI，暂不写任何样式）
 function buildStyleControl(type) {
